Co-authored-by: Alexander Russell <aj3x@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z" fill="currentColor"/></svg>
                     </div>
                     <div class="bottom">
-                        <p class="text">And the employees, their families, and their friends can access tools to feel stronger, more resilient and ready for whatever comes next. Because real well being goes beyond work. It lives in everyday life.</p>
+                        <p class="text">Employees, their families, and their friends can access tools to feel stronger, more resilient and ready for whatever comes next. Because real well being goes beyond work. It lives in everyday life.</p>
                             <img src="assets/img/hugr-image-desktop.png" alt="">
                         </div>
                 </div>
