Add About us page, image assets and clean up styles

--- a/index.html
+++ b/index.html
@@ -1,220 +1,297 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js" itemscope itemtype="http://schema.org/Corporation">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <!-- SEO -->
+  <title>Web Design and User Experience in Canada | Territorial</title>
+  <meta name="description" content="Territorial designs interfaces for web apps, products, and services.">
+  <meta name="author" content="Territorial">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="assets/icons/site.webmanifest">
+  <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="assets/icons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Web Design and User Experience in Canada | Territorial">
+  <meta property="og:description" content="Territorial designs interfaces for web apps, products, and services.">
+  <meta property="og:type" content="company">
+  <meta property="og:image" content="https://territorial.ca/dist/img/ico/facebook-share-icon.jpg" />
+  <meta property="og:site_name" content="Territorial | Web Design and User Experience in Canada" />
+
+  <!-- Schema.org -->
+  <meta itemprop="name" content="Territorial">
+  <meta itemprop="description" content="Territorial designs interfaces for web apps, products, and services.">
+  <meta itemprop="image" content="https://territorial.ca/dist/img/ico/facebook-share-icon.jpg">
+  <meta itemprop="address" content="107-123 Ave B South, Saskatoon SK S7M 5X6, Canada">
+  <meta itemprop="legalName" content="Territorial Creative Inc.">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@territorialx">
+  <meta name="twitter:title" content="Web Design and User Experience in Canada | Territorial">
+  <meta name="twitter:description" content="Territorial designs interfaces for web apps, products, and services.">
+  <meta name="twitter:image:src" content="https://territorial.ca/dist/img/ico/facebook-share-icon.jpg">
+  <meta name="twitter:domain" content="https://territorial.ca">
 </head>
+
+
 <body>
 
-<header class="site-header">
-  <div class="nav-container centered-wide">
-    <a href="/" class="logo-link">
-      <img src="assets/img/logo.svg" alt="Territorial Logo" class="site-logo" />
-    </a>
+  <header class="site-header">
+    <div class="nav-container centered-wide">
+      <a href="/" class="logo-link">
+        <img src="assets/img/logo.svg" alt="Territorial Logo" class="site-logo" />
+      </a>
 
-    <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
+      <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
 
-    <nav class="main-nav">
-      <a href="#about">About us</a>
-      <a href="mailto:us@territorial.ca">Contact</a>
-    </nav>
-  </div>
-</header>
-
-
-<section class="hero-section">
-  <div class="hero-content centered-wide">
-    <h1 class="hero-title hero-title-split">BUILD PRODUCTS THAT DRIVE MEANINGFUL IMPACT</h1>
-  </div>
-</section>
-
-
-
-
-    		<section class="about-section">
-
-			<div class="pin-height">
-				<div class="container">
-					<div class="header">
-						<p class="left">How We Shape The Future</p>
-						<div class="right">
-
-          <img src="assets/img/bear-logo-text.png" alt="Circular Territorial text" class="circle-text-img" />
-          <img src="assets/img/bear-logo.png" alt="Bear Head Logo" class="center-bear-img" />
-						</div>
-					</div>
-					<p class="paragraph">Since 2005, we’ve focused on what matters: making meaningful impact through digital products that serve real people, at real scale.</p>
-				</div>
-			</div>
-		</section>
-
-    
-
-    <section class="product-section">
-    
-    <div>
-        <div class="slide">
-            <div class="content-wrapper">
-                <div class="content">
-                    <div class="top">
-                        <p>The Engine Behind Efficient Work</p>
-
-                        <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z" fill="currentColor"/></svg>
-
-                    </div>
-                    <div class="bottom">
-                        <p class="text">We’ve helped the majority of over 700 chambers unlock new levels of clarity, connection, and control. Processes are simpler, networks stronger, and information turns into action. But that’s just the start...</p>
-                            <picture>
-  <!-- For mobile (max width 768px) -->
-  <source srcset="assets/img/crp-image-mobile.png" media="(max-width: 768px)">
-  
-  <!-- Default (desktop) -->
-  <img src="assets/img/crp-image-desktop.png" alt="Responsive image">
-</picture>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="content-wrapper">
-                <div class="content">
-                    <div class="top">
-                        <p>Built For Better Outcomes</p>
-
-                        <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z" fill="currentColor"/></svg>
-
-                    </div>
-                    <div class="bottom">
-                        <p class="text">Those chambers have helped over 33,000 businesses and their employees across Canada build lasting strength through clearer decisions, better leadership, and a healthier way to work. And there’s still more.</p>
-                            <img src="assets/img/arcora-image-desktop.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="slide  end-slide">
-            <div class="content-wrapper">
-                <div class="content">
-                    <div class="top">
-                        <p>Wellness You Can Measure</p>
-                        <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z" fill="currentColor"/></svg>
-                    </div>
-                    <div class="bottom">
-                        <p class="text">Employees, their families, and their friends can access tools to feel stronger, more resilient and ready for whatever comes next. Because real well being goes beyond work. It lives in everyday life.</p>
-                            <img src="assets/img/hugr-image-desktop.png" alt="">
-                        </div>
-                </div>
-            </div>
-        </div>
+      <nav class="main-nav">
+        <a href="about.html">About us</a>
+        <a href="mailto:us@territorial.ca">Contact</a>
+      </nav>
     </div>
-</section>
+  </header>
 
-<section class="teams-intro">
+
+  <section class="hero-section hero-section--home">
+    <div class="hero-content centered-wide">
+      <h1 class="hero-title hero-title-split">BUILD PRODUCTS THAT DRIVE MEANINGFUL IMPACT</h1>
+    </div>
+  </section>
+
+
+
+
+  <section class="impact-section">
 
     <div class="pin-height">
-        <div class="container">
-            <p class="header">A collective of creative minds dedicated to improving how Canadians access and experience their benefits.</p>
-            <svg width="1516" height="92" viewBox="0 0 1516 92" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path id="path" d="M0 92.0674C528.5 -28.9327 977.5 -32.4328 1516.5 92.0674" stroke="none"/>
-                <text id="text">
-                    <textPath id="textpath" xlink:href="#path" startOffset="100%" text-anchor="start">
-                        Our Great Team
-                    </textPath>
-                </text>
-            </svg>
+      <div class="container">
+        <div class="header">
+          <p class="left">How We Shape The Future</p>
+          <div class="right">
+
+            <img src="assets/img/bear-logo-text.png" alt="Circular Territorial text" class="circle-text-img" />
+            <img src="assets/img/bear-logo.png" alt="Bear Head Logo" class="center-bear-img" />
+          </div>
         </div>
+        <p class="paragraph">Since 2005, we've focused on what matters: making meaningful impact through digital
+          products that serve real people, at real scale.</p>
+      </div>
     </div>
-</section> 
+  </section>
 
-		<section class="teams-section">
-			<div class="pin-height">
-				<div class="container">
 
-					<!-- <div class="header">
+
+  <section class="product-section">
+
+    <div>
+      <div class="slide">
+        <div class="content-wrapper">
+          <div class="content">
+            <div class="top">
+
+
+              <p>The Engine Behind Efficient Work</p>
+
+              <a href="https://www.chambers.chamberplan.ca/?_gl=1*1cusbjv*_gcl_au*NzU1MjY4ODcuMTc1NTA0MDA5Nw">
+
+                <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z"
+                    fill="currentColor" />
+                </svg>
+
+              </a>
+
+            </div>
+            <div class="bottom">
+              <p class="text">We’ve helped the majority of over 700 chambers unlock new levels of clarity, connection,
+                and control. Processes are simpler, networks stronger, and information turns into action. But that’s
+                just the start...</p>
+
+
+              <img src="assets/img/crp-image-desktop.png" alt="Responsive image">
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content-wrapper">
+        <div class="content">
+          <div class="top">
+            <p>Built For Better Outcomes</p>
+
+            <a href="https://www.arcora.ca/solution/workplace-coaching-solutions/">
+
+              <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z"
+                  fill="currentColor" />
+              </svg>
+
+            </a>
+
+          </div>
+          <div class="bottom">
+            <p class="text">Those chambers have helped over 33,000 businesses and their employees across Canada build
+              lasting strength through clearer decisions, better leadership, and a healthier way to work. And there’s
+              still more.</p>
+
+            <img src="assets/img/arcora-image-desktop.png" alt="">
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="slide  end-slide">
+      <div class="content-wrapper">
+        <div class="content">
+          <div class="top">
+            <p>Wellness You Can Measure</p>
+            <a href="https://apps.apple.com/ca/app/hugr/id1445760716">
+              <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M19.1883 54.0014L14.9883 49.8014L43.7883 21.0015H17.9883V15.0015H53.9883V51.0014H47.9883V25.2015L19.1883 54.0014Z"
+                  fill="currentColor" />
+              </svg>
+            </a>
+          </div>
+          <div class="bottom">
+            <p class="text">And the employees, their families, and their friends can access tools to feel stronger, more
+              resilient and ready for whatever comes next. Because real well being goes beyond work. It lives in
+              everyday life.</p>
+
+            <img src="assets/img/hugr-image-desktop.png" alt="">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="teams-intro">
+
+    <div class="pin-height">
+      <div class="container">
+        <p class="header">A collective of creative minds dedicated to improving how Canadians access and experience
+          their benefits.</p>
+        <svg width="1516" height="92" viewBox="0 0 1516 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path id="path" d="M0 92.0674C528.5 -28.9327 977.5 -32.4328 1516.5 92.0674" stroke="none" />
+          <text id="text">
+            <textPath id="textpath" xlink:href="#path" startOffset="100%" text-anchor="start">
+              Our Great Team
+            </textPath>
+          </text>
+        </svg>
+      </div>
+    </div>
+  </section>
+
+  <section class="teams-section">
+    <div class="pin-height">
+      <div class="container">
+
+        <!-- <div class="header">
 						<p>Spotify datas</p>
 						<p>Your most stream artist in 2024</p>
 						<p>6 artists</p>
 					</div> -->
 
-<div class="circles">
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team7.jpg" alt="Team Member 1">
-    </div>
-  </div>
-
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team2.jpg" alt="Team Member 2">
-    </div>
-  </div>
-
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team3.jpg" alt="Team Member 3">
-    </div>
-  </div>
-
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team4.jpg" alt="Team Member 4">
-    </div>
-  </div>
-
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team5.jpg" alt="Team Member 5">
-    </div>
-  </div>
-
-  <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team6.jpg" alt="Team Member 6">
-    </div>
-  </div>
-
-    <div class="circle">
-    <div class="card polaroid-card">
-      <img src="assets/img/team1.jpg" alt="Team Member 7">
-    </div>
-  </div>
-</div>
-
-
-
-				</div>
-			</div>
-		</section>
-
-
-        <footer class="site-footer">
-        <div class="footer-headline right-wide">
-            The journey begins with us, shaping products that make their <span class="accent">mark</span>.
-        </div>
-        <div class="centered-wide footer-content">
-            <div class="footer-left">Territorial 2025</div>
-            <div class="footer-right">
-<div class="footer-phone">306-715-1538</div>
-                <div class="footer-address">
-                    107-123 Ave B South
-                    <br /> Saskatoon, SK S7M 5X6, Treaty 6
-                </div>
+        <div class="circles">
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team7.jpg" alt="Team Member 1">
             </div>
-        </div>
-    </footer>
+          </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
-    <script src="https://unpkg.com/split-type"></script>
-    <script src="js/main.js"></script>
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team2.jpg" alt="Team Member 2">
+            </div>
+          </div>
+
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team3.jpg" alt="Team Member 3">
+            </div>
+          </div>
+
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team4.jpg" alt="Team Member 4">
+            </div>
+          </div>
+
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team5.jpg" alt="Team Member 5">
+            </div>
+          </div>
+
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team6.jpg" alt="Team Member 6">
+            </div>
+          </div>
+
+          <div class="circle">
+            <div class="card polaroid-card">
+              <img src="assets/img/team1.jpg" alt="Team Member 7">
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+
+
+  <footer class="site-footer">
+    <div class="footer-headline right-wide">
+      The journey begins with us, shaping products that make their <span class="accent">mark</span>.
+    </div>
+    <div class="centered-wide footer-content">
+      <div class="footer-left">Territorial 2025</div>
+      <div class="footer-right">
+        <div class="footer-phone">306-715-1538</div>
+        <div class="footer-address">
+          107-123 Ave B South
+          <br /> Saskatoon, SK S7M 5X6, Treaty 6
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
+  <script src="https://unpkg.com/split-type"></script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
