feat: add lazy loading to images and preload team links

--- a/about.html
+++ b/about.html
@@ -45,6 +45,9 @@
   <meta name="twitter:description" content="Territorial designs interfaces for web apps, products, and services.">
   <meta name="twitter:image:src" content="https://territorial.ca/dist/img/ico/facebook-share-icon.jpg">
   <meta name="twitter:domain" content="https://territorial.ca">
+
+  <!-- Preloads -->
+   <link rel="preload" href="team-links.json" as="fetch" crossorigin="anonymous">
 </head>
 
 <body>
@@ -78,7 +81,7 @@
 
   <section class="about-team centered-wide">
     <div class="team-image">
-      <img src="assets/img/about-team-photo.png" alt="Our team in Whistler">
+      <img src="assets/img/about-team-photo.png" alt="Our team in Whistler" loading="lazy">
     </div>
     <div class="team-text hero-title-split">
       <p>
@@ -140,25 +143,25 @@
 
     <!-- Preload 8–12 small images (png/jpg/webp). Replace with your assets. -->
     <div class="medias">
-      <img src="assets/img/Alex.png" alt="Alex">
-      <img src="assets/img/Bryden.png" alt="Bryden">
-      <img src="assets/img/Chris.png" alt="Chris">
-      <img src="assets/img/Daren.png" alt="Daren">
-      <img src="assets/img/Emad.png" alt="Emad">
-      <img src="assets/img/Flav.png" alt="Flav">
-      <img src="assets/img/Ian.png" alt="Ian">
-      <img src="assets/img/Jana.png" alt="Jana">
-      <img src="assets/img/Joan.png" alt="Joan">
-      <img src="assets/img/Jordan.png" alt="Jordan">
-      <img src="assets/img/Josh.png" alt="Josh">
-      <img src="assets/img/Mon.png" alt="Mon">
-      <img src="assets/img/Nhi.png" alt="Nhi">
-      <img src="assets/img/Robert.png" alt="Robert">
-      <img src="assets/img/Sam.png" alt="Sam">
-      <img src="assets/img/Scott.png" alt="Scott">
-      <img src="assets/img/Sharon.png" alt="Sharon">
-      <img src="assets/img/Shaun.png" alt="Shaun">
-      <img src="assets/img/Sherry.png" alt="Sherry">
+      <img src="assets/img/Alex.png" alt="Alex" loading="lazy">
+      <img src="assets/img/Bryden.png" alt="Bryden" loading="lazy">
+      <img src="assets/img/Chris.png" alt="Chris" loading="lazy">
+      <img src="assets/img/Daren.png" alt="Daren" loading="lazy">
+      <img src="assets/img/Emad.png" alt="Emad" loading="lazy">
+      <img src="assets/img/Flav.png" alt="Flav" loading="lazy">
+      <img src="assets/img/Ian.png" alt="Ian" loading="lazy">
+      <img src="assets/img/Jana.png" alt="Jana" loading="lazy">
+      <img src="assets/img/Joan.png" alt="Joan" loading="lazy">
+      <img src="assets/img/Jordan.png" alt="Jordan" loading="lazy">
+      <img src="assets/img/Josh.png" alt="Josh" loading="lazy">
+      <img src="assets/img/Mon.png" alt="Mon" loading="lazy">
+      <img src="assets/img/Nhi.png" alt="Nhi" loading="lazy">
+      <img src="assets/img/Robert.png" alt="Robert" loading="lazy">
+      <img src="assets/img/Sam.png" alt="Sam" loading="lazy">
+      <img src="assets/img/Scott.png" alt="Scott" loading="lazy">
+      <img src="assets/img/Sharon.png" alt="Sharon" loading="lazy">
+      <img src="assets/img/Shaun.png" alt="Shaun" loading="lazy">
+      <img src="assets/img/Sherry.png" alt="Sherry" loading="lazy">
     </div>
 
   </section>
