--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 just the start...</p>
 
 
-              <img src="assets/img/crp-image-desktop.png" alt="Responsive image">
+              <img src="assets/img/crp-image-desktop.png" loading="lazy" alt="Responsive image">
 
 
             </div>
@@ -157,7 +157,7 @@
               lasting strength through clearer decisions, better leadership, and a healthier way to work. And there’s
               still more.</p>
 
-            <img src="assets/img/arcora-image-desktop.png" alt="">
+            <img src="assets/img/arcora-image-desktop.png" loading="lazy" alt="">
 
 
           </div>
@@ -183,7 +183,7 @@
               resilient and ready for whatever comes next. Because real well being goes beyond work. It lives in
               everyday life.</p>
 
-            <img src="assets/img/hugr-image-desktop.png" alt="">
+            <img src="assets/img/hugr-image-desktop.png" loading="lazy" alt="">
 
           </div>
         </div>
@@ -223,43 +223,43 @@
         <div class="circles">
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team7.jpg" alt="Team Member 1">
+              <img src="assets/img/team7.jpg" alt="Team Member 1" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team2.jpg" alt="Team Member 2">
+              <img src="assets/img/team2.jpg" alt="Team Member 2" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team3.jpg" alt="Team Member 3">
+              <img src="assets/img/team3.jpg" alt="Team Member 3" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team4.jpg" alt="Team Member 4">
+              <img src="assets/img/team4.jpg" alt="Team Member 4" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team5.jpg" alt="Team Member 5">
+              <img src="assets/img/team5.jpg" alt="Team Member 5" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team6.jpg" alt="Team Member 6">
+              <img src="assets/img/team6.jpg" alt="Team Member 6" loading="lazy">
             </div>
           </div>
 
           <div class="circle">
             <div class="card polaroid-card">
-              <img src="assets/img/team1.jpg" alt="Team Member 7">
+              <img src="assets/img/team1.jpg" alt="Team Member 7" loading="lazy">
             </div>
           </div>
         </div>
