main: add responsive image support with picture element and mobile version

--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
                 just the start...</p>
 
 
-              <img src="assets/img/crp-image-desktop.png" loading="lazy" alt="Responsive image">
+              <picture>
+                <source srcset="assets/img/crp-image-mobile.png" media="(max-width: 600px)">
+                <img id="crp-image" src="assets/img/crp-image-desktop.png" loading="lazy" alt="Responsive image">
+              </picture>
 
 
             </div>
