main: update staff images paths and add new staff images

--- a/about.html
+++ b/about.html
@@ -143,25 +143,25 @@
 
     <!-- Preload 8–12 small images (png/jpg/webp). Replace with your assets. -->
     <div class="medias">
-      <img src="assets/img/Alex.png" alt="Alex" loading="lazy">
-      <img src="assets/img/Bryden.png" alt="Bryden" loading="lazy">
-      <img src="assets/img/Chris.png" alt="Chris" loading="lazy">
-      <img src="assets/img/Daren.png" alt="Daren" loading="lazy">
-      <img src="assets/img/Emad.png" alt="Emad" loading="lazy">
-      <img src="assets/img/Flav.png" alt="Flav" loading="lazy">
-      <img src="assets/img/Ian.png" alt="Ian" loading="lazy">
-      <img src="assets/img/Jana.png" alt="Jana" loading="lazy">
-      <img src="assets/img/Joan.png" alt="Joan" loading="lazy">
-      <img src="assets/img/Jordan.png" alt="Jordan" loading="lazy">
-      <img src="assets/img/Josh.png" alt="Josh" loading="lazy">
-      <img src="assets/img/Mon.png" alt="Mon" loading="lazy">
-      <img src="assets/img/Nhi.png" alt="Nhi" loading="lazy">
-      <img src="assets/img/Robert.png" alt="Robert" loading="lazy">
-      <img src="assets/img/Sam.png" alt="Sam" loading="lazy">
-      <img src="assets/img/Scott.png" alt="Scott" loading="lazy">
-      <img src="assets/img/Sharon.png" alt="Sharon" loading="lazy">
-      <img src="assets/img/Shaun.png" alt="Shaun" loading="lazy">
-      <img src="assets/img/Sherry.png" alt="Sherry" loading="lazy">
+      <img src="assets/img/staff/Alex.png" alt="Alex" loading="lazy">
+      <img src="assets/img/staff/Bryden.png" alt="Bryden" loading="lazy">
+      <img src="assets/img/staff/Chris.png" alt="Chris" loading="lazy">
+      <img src="assets/img/staff/Daren.png" alt="Daren" loading="lazy">
+      <img src="assets/img/staff/Emad.png" alt="Emad" loading="lazy">
+      <img src="assets/img/staff/Flav.png" alt="Flav" loading="lazy">
+      <img src="assets/img/staff/Ian.png" alt="Ian" loading="lazy">
+      <img src="assets/img/staff/Jana.png" alt="Jana" loading="lazy">
+      <img src="assets/img/staff/Joan.png" alt="Joan" loading="lazy">
+      <img src="assets/img/staff/Jordan.png" alt="Jordan" loading="lazy">
+      <img src="assets/img/staff/Josh.png" alt="Josh" loading="lazy">
+      <img src="assets/img/staff/Mon.png" alt="Mon" loading="lazy">
+      <img src="assets/img/staff/Nhi.png" alt="Nhi" loading="lazy">
+      <img src="assets/img/staff/Robert.png" alt="Robert" loading="lazy">
+      <img src="assets/img/staff/Sam.png" alt="Sam" loading="lazy">
+      <img src="assets/img/staff/Scott.png" alt="Scott" loading="lazy">
+      <img src="assets/img/staff/Sharon.png" alt="Sharon" loading="lazy">
+      <img src="assets/img/staff/Shaun.png" alt="Shaun" loading="lazy">
+      <img src="assets/img/staff/Sherry.png" alt="Sherry" loading="lazy">
     </div>
 
   </section>
