main: update link to Chamber Plan

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
               <p>The Engine Behind Efficient Work</p>
 
-              <a href="https://www.chambers.chamberplan.ca/?_gl=1*1cusbjv*_gcl_au*NzU1MjY4ODcuMTc1NTA0MDA5Nw">
+              <a href="https://www.chambers.chamberplan.ca">
 
                 <svg width="81" height="82" viewBox="0 0 81 82" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
