--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
     <div class="centered-wide footer-content">
       <div class="footer-left">Territorial 2025</div>
       <div class="footer-right">
+        <div class="footer-privacy">
+          <a href="">Privacy Policy</a>
+        </div>
         <div class="footer-phone">306-715-1538</div>
         <div class="footer-address">
           107-123 Ave B South
