main: text updates in about and index pages

--- a/about.html
+++ b/about.html
@@ -85,12 +85,10 @@
     </div>
     <div class="team-text hero-title-split">
       <p>
-        We believe great work happens when people feel trusted, focused, and supported. That’s why we stay open, put
-        users at the center, and ask why before jumping into how or how fast.
-      </p>
-      <p>
-        We keep learning, stay curious, and bring care to everything we build. Progress matters, but how we get there
-        matters just as much.
+        We believe great work happens when people feel trusted, focused, and supported.
+      
+        We keep learning, stay curious, and bring care to everything we build.
+        Progress matters, but how we get there matters just as much.
       </p>
     </div>
   </section>
@@ -223,7 +221,7 @@
 
   <footer class="site-footer">
     <div class="footer-headline right-wide">
-      The journey begins with us, shaping products that make their <span class="accent">mark</span>.
+      Shaping products that make their <span class="accent">mark</span>.
     </div>
     <div class="centered-wide footer-content">
       <div class="footer-left">Territorial 2025</div>
