--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             <img src="assets/img/bear-logo.png" alt="Bear Head Logo" class="center-bear-img" />
           </div>
         </div>
-        <p class="paragraph">Since 2005, we've focused on what matters: making meaningful impact through digital
-          products that serve real people, at real scale.</p>
+        <p class="paragraph">Since 2005, we've focused on what matters: making meaningful impact through products that serve people.</p>
       </div>
     </div>
   </section>
@@ -276,7 +275,7 @@
 
   <footer class="site-footer">
     <div class="footer-headline right-wide">
-      The journey begins with us, shaping products that make their <span class="accent">mark</span>.
+      Shaping products that make their <span class="accent">mark</span>.
     </div>
     <div class="centered-wide footer-content">
       <div class="footer-left">Territorial 2025</div>
